2005-06-15  Erez Zadok  <ezk@cs.sunysb.edu>

	* minor new port: i386-pc-linux-fc4 (gcc4 catches more bugs).

	* m4/macros/type_recvfrom_fromlen.m4: linux systems use unsigned
	int as the type of recvfrom()'s 6th argument.

	* m4/macros/type_yp_order_outorder.m4: linux systems use unsigned
	int as the type of yp_order()'s 3rd argument.

2005-06-15  Erez Zadok  <ezk@cs.sunysb.edu>

	* scripts/amd.conf-sample (map_type): typo, said mount_type
	instead of map_type for the 'exec' example.

2005-06-11  Erez Zadok  <ezk@cs.sunysb.edu>

	*******************************************************************
	*** Released am-utils-6.1					***
	*******************************************************************

2005-06-04  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/ops_nfs.c (mount_nfs_fh): set timeo/retrans mount options
	only if the user specified them in amd.conf or elsewhere.  If they
	were not specified, don't do anything, which would let the OS use
	its own defaults.

	* amd/get_args.c (get_args): negative timeo/retrans are "good" in
	that they represent uninitialized values (meaning to let the OS
	use it's default values).  So only check if user specified a value
	equal to zero (invalid).

	* amd/amd.h: define AMU_TYPE_NONE so we know when users didn't
	specify timeo/retrans at all.

2005-06-03  Erez Zadok  <ezk@cs.sunysb.edu>

	*******************************************************************
	*** Released am-utils-6.1-rc7					***
	*******************************************************************

	* m4/macros/os_cflags.m4 (CFLAGS): use custom-OS C flags for
	configuring, not just for building.  That way the two phases
	(configure and compile) are in sync.  This fixes getwire() on
	OSF/1 systems.

	* conf/nfs_prot/nfs_prot_sunos5_8.h: define INADDR_NONE if not
	defined in system headers.

2005-06-01  Erez Zadok  <ezk@cs.sunysb.edu>

	* libamu/Makefile.am (EXTRA_DIST): remove alloca.c as it's no
	longer needed.

2005-05-28  Erez Zadok  <ezk@cs.sunysb.edu>
